# axum-streams-rs

./: Cargo.toml  README.md
.github/workflows/: security-audit.yml  tests.yml
examples/: arrow-example.rs  csv-example.rs  json-array-complex-structure.rs  json-example.rs  json-with-buffering.rs  json-with-errors-example.rs  protobuf-example.rs  text-example.rs
src/: arrow_format.rs  csv_format.rs  envelope.rs  json_formats.rs  json_stream_body.rs  lib.rs  protobuf_format.rs  stream_body_as.rs  stream_body_with.rs  stream_format.rs  test_client.rs  text_format.rs
