[package]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "HTTP body streaming support for Axus: JSON/CSV and others"
edition = "2021"
rust-version = "1.56"
homepage = "https://github.com/abdolence/axum-streams-rs"
repository = "https://github.com/abdolence/axum-streams-rs"
documentation = "https://docs.rs/axum-streams"
keywords = ["http", "web", "axus", 'stream']
license = "Apache-2.0"
name = "axum-streams"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
version = "0.4.1"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "axum_streams"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.5" }
bytes = "1.1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
http = "0.2"
mime = "0.3"
tokio = "1.20"
serde = { version = "1.0", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7" }
futures = "0.3"
csv = { version = "1.1", optional = true }
prost = { version="0.10", optional = true }

[features]
default = []
json = ["dep:serde", "dep:serde_json"]
csv = ["dep:csv", "dep:serde"]
protobuf = ["dep:prost"]

[dev-dependencies]
futures = "0.3"
hyper = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "multipart"] }
tower = { version = "0.4", default-features = false, features = ["util", "make"] }
tower-http = { version = "0.3", features = ["util", "map-response-body"] }
tower-layer = "0.3"
tower-service = "0.3"
tokio = { version = "1.20", features = ["full"] }
prost = { version= "0.10", features = ["prost-derive"] }

[[example]]
name = "json-example"
path = "examples/json-example.rs"
required-features = ["json"]

[[example]]
name = "csv-example"
path = "examples/csv-example.rs"
required-features = ["csv"]

[[example]]
name = "protobuf-example"
path = "examples/protobuf-example.rs"
required-features = ["protobuf"]

[build-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }
